monorepo/k8s/hello_world_service/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-service
  template:
    metadata:
      labels:
        app: hello-world-service
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: hello-world-service
          image: hello-world-service:${IMAGE_TAG}
          ports:
            - containerPort: 8080
