monorepo/k8s/hello_world_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
